# Cortx-Data-Catalog

./: .env.example  .gitignore  EXPLANATION.md  HOW_TO_RUN_LOCALLY.txt  INSTRUCTIONS.txt  LICENSE  Project_detail.md  README.md  SETUP_AND_DEPLOY.md  SETUP_NEW_SYSTEM.txt  app.py  app_render.py  catalog.json  design_document.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  run_demo.py  tool_manifest.json
examples/: KAGGLE_DATASETS.md  kaggle_example.py  kaggle_notebook.py
src/cortx_catalog/: __init__.py  annotator.py  catalog_builder.py  cli.py  demo.py  embedder.py  manifest.py  models.py  profiler.py
src/cortx_catalog/loaders/: __init__.py  base.py  csv_loader.py  parquet.py  sqlite_loader.py
templates/: index.html
tests/: __init__.py  test_loaders.py  test_profiler.py
